# BLUETOOTH_TRACKING

./: .clang-format  .gitignore  .gitmodules  Log_esp32.txt
AWS_certs/JC_certs/: endpoint  tcp-server-Policy  tcp-server.cert.pem  tcp-server.private.key  tcp-server.public.key
AWS_certs/Old_certs/: endpoint
Design/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  access_control.sll  access_control.spj
Design/components/: Image1.ecomp  POPUPHome.ecomp  POPUPMenuPanel.ecomp
Design/gui/: ui.c  ui.h
Design/gui/screens/: ui_Screen1.c  ui_Screen2.c
FW/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
FW/ACCESS_CONTROL/Env/: environment.h
FW/ACCESS_CONTROL/MCU_1/: CMakeLists.txt  sdkconfig  sdkconfig.old
FW/ACCESS_CONTROL/MCU_1/App/05_app_gui/: CMakeLists.txt  ui_events.c
FW/ACCESS_CONTROL/MCU_1/App/05_app_gui/app_display/: app_display.c  app_display.h
FW/ACCESS_CONTROL/MCU_1/App/05_app_gui/events/: attendance_event.c  authenticate_event.c  data_event.c  enroll_event.c  faceid_enroll_event.c  finger_enroll_event.c  home_event.c  menu_event.c  user_info_event.c
FW/ACCESS_CONTROL/MCU_1/App/05_app_gui/gui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
FW/ACCESS_CONTROL/MCU_1/App/05_app_gui/gui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_image1.c  ui_comp_image1.h  ui_comp_popuphome.c  ui_comp_popuphome.h  ui_comp_popupmenupanel.c  ui_comp_popupmenupanel.h
FW/ACCESS_CONTROL/MCU_1/App/05_app_gui/gui/images/: ui_img_1048813395.c  ui_img_1052123464.c  ui_img_1101766569.c  ui_img_1406808990.c  ui_img_1985633929.c  ui_img_388382192.c  ui_img_621954408.c  ui_img_694049672.c  ui_img_988180266.c
FW/ACCESS_CONTROL/MCU_1/App/05_app_gui/gui/screens/: ui_Attendance.c  ui_Authenticate.c  ui_Enroll.c  ui_FaceIDEnroll.c  ui_FingerEnroll.c  ui_Home.c  ui_Menu.c  ui_Screen1.c  ui_UserData.c  ui_UserInfo.c
FW/ACCESS_CONTROL/MCU_1/Middleware/esp-dl/: CMakeLists.txt
FW/ACCESS_CONTROL/MCU_2/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
FW/ACCESS_CONTROL/MCU_2/main/: CMakeLists.txt  main.c
FW/ACCESS_CONTROL/MCU_BLE/: sdkconfig  sdkconfig.old
FW/ACCESS_CONTROL/MCU_BLE/main/: CMakeLists.txt  main.c
FW/ACCESS_CONTROL/MCU_WiFi/: CMakeLists.txt  sdkconfig
FW/App/ble_tracking/: app_ble_tracking.c
FW/App/mqtt_client/: app_mqtt_client.c
FW/App/wifi_connect/: CMakeLists.txt  app_wifi_connect.c
FW/BLUETOOTH_GATEWAY/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
FW/BLUETOOTH_GATEWAY/Middleware/WiFi/: CMakeLists.txt  wifi_helper.c  wifi_helper.h
FW/BLUETOOTH_GATEWAY/Middleware/WiFi/STA_Mode/: wifi_sta.c
FW/BLUETOOTH_GATEWAY/Middleware/WiFi/Scan/: wifi_scan.c  wifi_scan.h
FW/BLUETOOTH_GATEWAY/Middleware/WiFi/Store/: wifi_store.c  wifi_store.h
FW/BLUETOOTH_GATEWAY/main/: CMakeLists.txt  main.c
FW/Bsp/wifi/: CMakeLists.txt  wifi.c  wifi.h
FW/MCU_BLE/: CMakeLists.txt  sdkconfig  sdkconfig.old
FW/MCU_BLE/main/: CMakeLists.txt  main.c  main.h
FW/MCU_WiFi/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
FW/MCU_WiFi/MyFATFS/: CMakeLists.txt  diskio.c  ff.c
FW/MCU_WiFi/main/: CMakeLists.txt  main.c
FW/Middleware/ble_eddystone/: CMakeLists.txt  eddystone_api.c
FW/Middleware/kalman_filter/: kalman_filter.c  kalman_filter.h
FW/Test/: test.c
FW/Test/ADS1115/: sdkconfig  sdkconfig.old
FW/Test/AS608/: CMakeLists.txt  sdkconfig  sdkconfig.old
FW/Test/AWS_IOT/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
FW/Test/Button/: CMakeLists.txt  sdkconfig  sdkconfig.old
FW/main/: main.c
HW/3D-Model/: BZV55C3V3 L0.STEP  Button_4.7x4.5mm_4P.stp  CAP_0603.stp  CAP_0805.stp  CDRH4D28.STEP  DUAL LED HOUSING.SLDPRT  EESOP-10.STEP  Header_2.54mm_2P.stp  Header_2.54mm_4P.stp  Inductor_0630.stp  MX_1_25mm_8.STEP  SOD-123.step  SOIC-8E.STEP  TFT_ILI9341_3_2INCH.step  cap0805.step  cap1206.STEP  ferriteBead0805.step  led0603(G).STEP  led0603(R).STEP  led0603(Y).step  led0603.STEP  res0402.step  res0603.step  res0805.step
HW/Simulation/: 0_10V_Receiver.ms14  0_10V_Receiver.ms14 (Security copy)  0_10V_Transmitter.ms14  0_10V_Transmitter.ms14 (Security copy)  4_20mA_Full_Circuit.ms14  4_20mA_Full_Circuit.ms14 (Security copy)  4_20mA_Receiver.ms14  4_20mA_Receiver.ms14 (Security copy)  4_20mA_Transmitter.ms14  4_20mA_Transmitter.ms14 (Security copy)  Sample.ms14
HW/Source/: BluetoothTracking.MbsDoc  BluetoothTracking.PrjMbd  BluetoothTracking.PrjMbdStructure
HW/Template/: Template_A2.SchDot  Template_A3.SchDot  Template_A4.SchDot
PopupScreen/: Popup_Screens.spj
PopupScreen/popup/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
SW/Access_Control_Server/: attendance.json  handle_data.py  http_thingsboard.py  main.py  publish_thingsboard.py  start.sh  ui.py  users.json
SW/AeroSenseWavve/: .gitignore  README.org  pom.xml
SW/Bluetooth_Configuration_Server/: bluetooth_pair.py  configs.json  mqtt_config.py  start.sh  system_logs_2025-05-05.txt  system_logs_2025-05-06.txt  wifi_config.py
SW/Bluetooth_Pairing_Server/: ble_server.py  bluetooth_pair.py  configs.json  wifi_config.py
SW/Bluetooth_Tracking_Server/: .env  environment.py  http_thingsboard.py  listener.py  processor.py  publish_thingsboard.py  start.sh  system_logs_1_2025-06-02.txt  system_logs_2025-06-02.txt  ui.py
SW/TcpServer/: http_client.py  main.py  main_multi_deivce.py  main_multi_device.py  main_multi_device_aws.py  main_one_device.py  main_pre.py  test.py  test_client.py
SW/VitalServer/: README.md  start.sh  system_logs_2025-05-21.txt  system_logs_2025-05-28.txt  system_logs_2025-06-02.txt
SW/iot-server-dreamsedge/: run-app.sh
Squareline/PopupScreen/: Popup_Screens.sll
Squareline/Project/: SquareLine_Project.sll  SquareLine_Project_events.py
Test/GateWay/: CMakeLists.txt
Test/ble_eddystone/: sdkconfig
Test/bleprph_wifi_coex/: sdkconfig  sdkconfig.old
Test/ssl_ds/: CMakeLists.txt  sdkconfig
Test/tcp/: sdkconfig  sdkconfig.old
pythonProject/: main.py  rssi_data.csv  rssi_distance.py  rssi_distance_data.csv
(+1045 files in other folders)
